gap fix

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ a {
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 12px;
 }
 
 .project-images img {
